[package]
edition      = "2024"
name         = "lawnmower_esp_rs"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "lawnmower_esp_rs"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["esp32c6", "log-04", "unstable"] }
esp-radio = { version = "0.18.0", features = ["esp32c6", "wifi", "log-04", "esp-alloc"] }

esp-rtos = { version = "0.3.0", features = [
  "embassy",
  "esp-alloc",
  "esp32c6",
  "esp-radio",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c6", "log-04"] }
log                    = "0.4.27"

embassy-net = { version = "0.7.1", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv4"] }
embassy-executor = { version = "0.10.0", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
embedded-io-async = "0.6.1"
esp-alloc = "0.10.0"
esp-backtrace = { version = "0.19.0", features = [
  "esp32c6",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.17.0", features = ["esp32c6", "log-04"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.dev.package.esp-radio]
opt-level = 3

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'

[profile.release.package.esp-radio]
opt-level = 3
